# newbieGameEngine

./: .clang-format  .cmake-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_webassembly.sh  config.h.in
Asset/Blender/: area_light.dae  area_light.ogex  area_light_test.ogex  (+2 more)
Editor/: CMakeLists.txt  Editor.html  EditorConfig.cpp  EditorLogic.cpp  EditorLogic.hpp
Empty/: EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Common/: Allocator.cpp  Allocator.hpp  AnimationManager.cpp  AnimationManager.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.hpp  BaseSceneObject.hpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  DebugManager.cpp  DebugManager.hpp  ForwardRenderPass.cpp  ForwardRenderPass.hpp  FrameStructure.hpp  GameLogic.cpp  GameLogic.hpp  GfxConfiguration.h  GfxConfiguration.hpp  GraphicsManager.cpp  GraphicsManager.hpp  HuffmanTree.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Scene.cpp  Scene.hpp  SceneBoneNode.hpp  SceneCameraNode.hpp  SceneGeometryNode.hpp  SceneLightNode.hpp  SceneManager.cpp  (+25 more)
Framework/Common/test/: AssetLoaderTest.cpp  CMakeLists.txt
Framework/GeomMath/: CMakeLists.txt  aabb.hpp  geommath.hpp
Framework/GeomMath/cpp/: Absolute.cpp  AddByElement.cpp  DCT.cpp  DivByElement.cpp  InverseMatrix.cpp  MatrixUtil.cpp  MulByElement.cpp  Normalize.cpp  Pow.cpp  SubByElement.cpp  Transform.cpp  Transpose.cpp
Framework/GeomMath/ispc/: CMakeLists.txt
Framework/GeomMath/test/: CMakeLists.txt  test.cpp
Game/: CMakeLists.txt
Game/Billiard/: BilliardGameConfig.cpp  BilliardGameLogic.cpp  BilliardGameLogic.hpp  CMakeLists.txt
Game/Billiard/Asset/Shaders/: basic.metal  debugInfo.metal
Game/DebugInfo/: CMakeLists.txt  DebugInfo_config.cpp  DebugInfo_logic.cpp  DebugInfo_logic.hpp
Physics/Bullet/: BulletPhysicsManager.cpp  BulletPhysicsManager.hpp  CMakeLists.txt
Platform/: CMakeLists.txt
Platform/Darwin/: AppDelegate.m  CMakeLists.txt  CocoaApplication.h  CocoaApplication.mm  CocoaApplicationConfig.cpp  CocoaMetalApplication.h  CocoaMetalApplication.mm  CocoaMetalApplicationConfig.cpp  CocoaOpenGLApplication.h  CocoaOpenGLApplication.mm  CocoaOpenGLApplicationConfig.cpp  GLView.h  GLView.mm  MetalView.mm  WindowDelegate.h  WindowDelegate.m
Platform/Darwin/Project/: CMakeCache.txt  cmake_install.cmake
Platform/Darwin/Project/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Platform/Darwin/Project/Framework/: cmake_install.cmake
Platform/Darwin/Project/Framework/Common/: cmake_install.cmake
Platform/Darwin/Project/Framework/Common/newbieGameEngine.build/Debug/Common.build/: dgph
Platform/Darwin/Project/Framework/Common/newbieGameEngine.build/Debug/Common.build/Objects-normal/x86_64/: Allocator.d  BaseApplication.d  Common.LinkFileList  GraphicsManager.d  MemoryManager.d  main.d
Platform/Darwin/Project/Platform/: cmake_install.cmake
Platform/Darwin/Project/Platform/Darwin/: cmake_install.cmake
Platform/Darwin/Project/Platform/Darwin/Debug/NewbieGameEngineCocoa.app/Contents/: Info.plist
Platform/Darwin/Project/Platform/Darwin/Debug/NewbieGameEngineCocoa.app/Contents/MacOS/: NewbieGameEngineCocoa
Platform/Darwin/Project/Platform/Darwin/newbieGameEngine.build/Debug/NewbieGameEngineCocoa.build/: dgph
Platform/Darwin/Project/Platform/Darwin/newbieGameEngine.build/Debug/NewbieGameEngineCocoa.build/Objects-normal/x86_64/: AppDelegate.d  CocoaApplication.d  CocoaApplicationConfig.d  NewbieGameEngineCocoa.LinkFileList  WindowDelegate.d
Platform/Darwin/Project/Platform/Empty/: cmake_install.cmake
Platform/Darwin/Project/Platform/Empty/newbieGameEngine.build/Debug/Empty.build/: dgph
Platform/Darwin/Project/Platform/Empty/newbieGameEngine.build/Debug/Empty.build/Objects-normal/x86_64/: Empty.LinkFileList
Platform/Darwin/Project/newbieGameEngine.build/Debug/ALL_BUILD.build/: Script-580E3FA4701348AFA428B92D.sh  dgph
Platform/Darwin/Project/newbieGameEngine.build/Debug/ZERO_CHECK.build/: Script-704B8351C96A4A0498453356.sh  dgph
Platform/Darwin/Project/newbieGameEngine.xcodeproj/: project.pbxproj
Platform/Darwin/Project/newbieGameEngine.xcodeproj/project.xcworkspace/xcuserdata/shensijie.xcuserdatad/: UserInterfaceState.xcuserstate
Platform/Darwin/Project/newbieGameEngine.xcodeproj/xcuserdata/shensijie.xcuserdatad/xcschemes/: NewbieGameEngineCocoa.xcscheme  xcschememanagement.plist
Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp  EmptyApplication.hpp  EmptyApplicationConfig.cpp
Platform/Linux/: helloengine_opengl.cpp  helloengine_xcb.c
Platform/Sdl/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp  SdlApplication.cpp  SdlApplication.hpp
Platform/Windows/: copy.vso  d3dx12.h  helloengine_win.c
Platform/Windows/DirectX/: README.md  cbuffer.h  copy.pso  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  vsoutput.hs
RHI/: CMakeLists.txt
RHI/Empty/: CMakeLists.txt
RHI/Metal/: CMakeLists.txt  MetalConfig.hpp  MetalGraphicsManager.h  MetalGraphicsManager.mm  MetalRenderer.h  MetalRenderer.mm
RHI/OpenGL/: CMakeLists.txt  OpenGLESConfig.hpp  OpenGLESGraphicsManager.cpp  OpenGLESGraphicsManager.hpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLGraphicsManagerCommonBase.cpp  OpenGLGraphicsManagerCommonBase.hpp  OpenGLShaderManager.hpp
Test/: AnimationTest.cpp  AssetLoaderTest.cpp  BezierCubic1DTest.cpp  BulletTest.cpp  CMakeLists.txt  ColorSpaceConversionTest.cpp  DdsParserTest.cpp  GeomMathTest.cpp  GjkTest.cpp  HdrParserTest.cpp  JpegParserTest.cpp  LinearInterpolateTest.cpp  NumericalMethodsTest.cpp  OgexParserTest.cpp  PngParserTest.cpp  PolarDecomposeTest.cpp  QRDecomposeTest.cpp  QuickhullTest.cpp  RasterizationTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  Test.html  TgaParserTest.cpp
cmake/: Emscripten.cmake  PlatformDependencies.cmake  TargetArchDetect.cmake
(+95 files in other folders)
